tests/semantic/fail/infixExp-2.tiger
let
      var x : string := 0
in
      x := "Hello" <> "Bye"
end
